# TIED

./: .gitignore  README.md  inference encoder only.ipynb  inference.ipynb  prepare_dataset.py  pyproject.toml  test.py  train.py
dataset/: dataset.json
tied/: __init__.py  config.py  data_processing.py  layers.py  model.py  training.py
